--- a/20221106-API安全01-crAPI漏洞靶场.md
+++ b/20221106-API安全01-crAPI漏洞靶场.md
@@ -4,7 +4,7 @@
 
 ### 靶场简介
 
-记住：**在实战中 hack，不要学习 hack**。
+**在 hack 中学习，不要去学习 hack**。
 
 对于想了解 API 安全的同学，最直接的方式就是拿到一个靶场进行实战。正好，crAPI  项目就是 OWASP 推出的 API 安全项目，可以帮助大家了解常见的 API 安全漏洞。
 
